old/ryzen-3900x-with-no-omit-fp/installation-logs/fp-withfp-opt-id/pts_opencv-bench-1.0.0.log
opencv-benchmarks-0.1/
opencv-benchmarks-0.1/.gitignore
opencv-benchmarks-0.1/CMakeLists.txt
opencv-benchmarks-0.1/README.md
opencv-benchmarks-0.1/lena.jpg
opencv-benchmarks-0.1/main.py
opencv-benchmarks-0.1/opencv-bench/
opencv-benchmarks-0.1/opencv-bench/downloads.xml
opencv-benchmarks-0.1/opencv-bench/install.sh
opencv-benchmarks-0.1/opencv-bench/results-definition.xml
opencv-benchmarks-0.1/opencv-bench/test-definition.xml
opencv-benchmarks-0.1/src/
opencv-benchmarks-0.1/src/contours2.cpp
opencv-benchmarks-0.1/src/discrete_fourier_transform.cpp
opencv-benchmarks-0.1/src/edge.cpp
opencv-benchmarks-0.1/src/morphology_2.cpp
opencv-benchmarks-0.1/src/smoothing.cpp
CMake Deprecation Warning at CMakeLists.txt:1 (cmake_minimum_required):
  Compatibility with CMake < 3.5 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value or use a ...<max> suffix to tell
  CMake that the project does not need compatibility with older versions.


-- The C compiler identification is GNU 13.2.0
-- The CXX compiler identification is GNU 13.2.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /tmp/pts-compiler-mask-opencv-bench1.0.0/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /tmp/pts-compiler-mask-opencv-bench1.0.0/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Performing Test COMPILER_SUPPORTS_CXX11
-- Performing Test COMPILER_SUPPORTS_CXX11 - Success
-- Performing Test COMPILER_SUPPORTS_CXX0X
-- Performing Test COMPILER_SUPPORTS_CXX0X - Success
-- Found OpenCV: /usr (found version "4.6.0") 
-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /home/ubuntu/.phoronix-test-suite/installed-tests/pts/opencv-bench-1.0.0/opencv-benchmarks-0.1
[ 10%] Building CXX object CMakeFiles/contours2.dir/src/contours2.cpp.o
[ 30%] Building CXX object CMakeFiles/edge.dir/src/edge.cpp.o
[ 30%] Building CXX object CMakeFiles/discrete_fourier_transform.dir/src/discrete_fourier_transform.cpp.o
[ 40%] Building CXX object CMakeFiles/morphology_2.dir/src/morphology_2.cpp.o
[ 50%] Building CXX object CMakeFiles/smoothing.dir/src/smoothing.cpp.o
/home/ubuntu/.phoronix-test-suite/installed-tests/pts/opencv-bench-1.0.0/opencv-benchmarks-0.1/src/discrete_fourier_transform.cpp: In function ‘int main(int, char**)’:
/home/ubuntu/.phoronix-test-suite/installed-tests/pts/opencv-bench-1.0.0/opencv-benchmarks-0.1/src/discrete_fourier_transform.cpp:39:30: error: ‘CV_LOAD_IMAGE_GRAYSCALE’ was not declared in this scope
   39 |     Mat I = imread(filename, CV_LOAD_IMAGE_GRAYSCALE);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~
/home/ubuntu/.phoronix-test-suite/installed-tests/pts/opencv-bench-1.0.0/opencv-benchmarks-0.1/src/discrete_fourier_transform.cpp:84:33: error: ‘CV_MINMAX’ was not declared in this scope; did you mean ‘CV_MMX’?
   84 |     normalize(magI, magI, 0, 1, CV_MINMAX); // Transform the matrix with float values into a
      |                                 ^~~~~~~~~
      |                                 CV_MMX
make[2]: *** [CMakeFiles/discrete_fourier_transform.dir/build.make:76: CMakeFiles/discrete_fourier_transform.dir/src/discrete_fourier_transform.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:117: CMakeFiles/discrete_fourier_transform.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 60%] Linking CXX executable bin/edge
[ 70%] Linking CXX executable bin/smoothing
[ 80%] Linking CXX executable bin/morphology_2
[ 90%] Linking CXX executable bin/contours2
[ 90%] Built target edge
[ 90%] Built target morphology_2
[ 90%] Built target contours2
[ 90%] Built target smoothing
make: *** [Makefile:91: all] Error 2
